--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,10 +15,10 @@
 
     <div *ngFor="let appointment of appointments"
          [class.appointment]="appointment.hasAppointment"
-         class="zoom-row">
+         class="scale-row">
 
       <div #cell
-           class="zoom-cell">
+           class="scale-cell">
 
         <div class="time">
           {{ appointment.start | date:'HH:mm' }}
